Added extra markdown

--- a/second-python-notebook.ipynb
+++ b/second-python-notebook.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# My first notebook: analysis of donations to california props\n"
+    "# My first notebook: analysis of donations to california props\n",
+    "\n",
+    "By Els Engel\n",
+    "\n",
+    "This is my first python notebook as part of Ben Welsh's course 'Python for data journalists'"
    ]
   },
   {
@@ -695,6 +699,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "merge proposition 67 table with contributors table "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
@@ -948,6 +959,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the magic starts!!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -987,6 +1005,13 @@
    ],
    "source": [
     "merged.committee_position.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look at differences between support and oppose donations"
    ]
   },
   {
@@ -1069,6 +1094,13 @@
    ],
    "source": [
     "support.amount.sum() / merged.amount.sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make top 10"
    ]
   },
   {
@@ -1709,6 +1741,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which committee raised the most money?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -1790,6 +1829,13 @@
    ],
    "source": [
     "merged.groupby(\"committee_name_x\").amount.sum().reset_index().sort_values(\"amount\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Who were the biggest donors?"
    ]
   },
   {
